Major Portfolio Optimization & Modernization
 Features:
- Optimized navigation bar (only visible on home section)
- Consolidated CSS with improved performance
- Mobile-first responsive design
- Added accessibility improvements
- GPU-accelerated animations

 Cleanup:
- Removed unused src/ directory and React components
- Deleted unused cursor-effects files
- Consolidated duplicate CSS media queries
- Fixed JavaScript variable conflicts

 Mobile Improvements:
- Touch-friendly buttons (44px minimum)
- Improved mobile navigation
- Landscape orientation support
- Reduced animation intensity for better performance

 UI/UX Enhancements:
- Modern glass-morphism effects
- Smooth transitions and animations
- Professional neon accent theme
- Print-friendly styles

 Technical Improvements:
- Consolidated scroll handlers
- Performance optimizations (will-change, lazy loading)
- Reduced motion support
- High contrast mode support
- Updated documentation and package.json

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "shivansh-portfolio",
-  "version": "1.0.0",
-  "description": "Personal profile website for Shivansh Vishwakarma, a BTech CSE student.",
-  "main": "src/assets/scripts/main.js",
+  "version": "2.0.0",
+  "description": "Modern personal portfolio website for Shivansh Vishwakarma, BTech CSE student",
+  "main": "index.html",
   "scripts": {
-    "start": "live-server src/pages",
-    "build": "echo 'Build step not defined'",
+    "start": "live-server .",
+    "build": "echo 'Static site - no build step required'",
     "test": "echo 'No tests defined'"
   },
+  "keywords": ["portfolio", "website", "personal", "developer", "student"],
   "author": "Shivansh Vishwakarma",
   "license": "MIT",
   "dependencies": {},
